--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+blinker==1.4
 click==8.0.3
 colorama==0.4.4
 Flask==2.0.2
+Flask-Cors==3.0.10
+Flask-Mail==0.9.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
+pymongo==3.12.0
+six==1.16.0
 Werkzeug==2.0.2
